--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bunny-bubbles-nails",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://bunnybubblenails.com",
+  "homepage":"https://www.bunnybubblenails.com",
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
